# gorilla-physics

./: .gitignore  655.index.js  CMakeLists.txt  Cargo.toml  README.md  index.html  index.js  pyrightconfig.json  rust-toolchain.toml
.cargo/: config.toml
data/: box.mesh
data/table/: table.mtl
examples/: 1D_hopper.rs  ALSLIP.rs  LSLIP.rs  SLIP.rs  acrobot.rs  ball.rs  ball_drop.rs  cart.rs  cart_pole.rs  constraint_contact.rs  cube.rs  double_pendulum.rs  fem.rs  horizontal_rod_pendulum.rs  pendulum_energy.rs  profile.rs  pusher.rs  read_bunny_mass_spring.rs  rimless_wheel.rs  rod_by_spring.rs  socp.rs  spring_drop.rs  unconstrained_qp.rs
include/gorilla/: body.h  core.h  fgen.h  gorilla.h  math.h  particle.h  pcontacts.h  pfgen.h  physics.h  plinks.h  precision.h  pworld.h  random.h
python/: lin_solve.py  lqr.py  lqr_cart_pole.py  lqr_leg.py  lqr_zmp.py
src/: body.cpp  contact.rs  control.rs  core.cpp  double_pendulum.rs  dynamics.rs  energy.rs  fem.wgsl  fem_deformable.rs  fgen.cpp  fluid.rs  geometric_jacobian.rs  gpu.rs  helpers.rs  inertia.rs  integrators.rs  joint.rs  lib.rs  mass_spring_deformable.rs  math.cpp  mechanism.rs  mesh.rs  momentum.rs  particle.cpp  pcontacts.cpp  pfgen.cpp  physics.cpp  plinks.cpp  plot.rs  pose.rs  pworld.cpp  random.cpp  rigid_body.rs  simulate.rs  spatial_acceleration.rs  spatial_force.rs  spatial_vector.rs  test_helpers.rs  transform.rs  twist.rs  (+3 more)
src/builders/: biped_builder.rs  cloth_builder.rs  kinematic_loop_builder.rs  leg_builder.rs  mod.rs  navbot.rs  navbot_builder.rs
src/collision/: ccd.rs  cuboid.rs  epa.rs  gjk.rs  halfspace.rs  mesh.rs  mod.rs  polytope.rs  sphere.rs  triangle.rs
src/collision/ccd/: edge_edge.rs  mod.rs  solver.rs
src/collision/ccd/accd/: edge_edge.rs  line_line.rs  mod.rs  point_line.rs  point_plane.rs  point_point.rs  point_triangle.rs
src/control/: SLIP_control.rs  biped_control.rs  energy_control.rs  gripper_control.rs  hopper_control.rs  kinematic_loop.rs  leg_control.rs  lqr.rs  mod.rs  navbot_conrol.rs  navbot_control.rs  pusher_control.rs  quadruped_control.rs  servo.rs  so101_control.rs  swingup.rs
src/demos/: CMakeLists.txt  app.h  main.cpp  ogl_headers.h  timing.cpp  timing.h
src/demos/fireworks/: CMakeLists.txt  fireworks.cpp
src/examples/: CMakeLists.txt  app.cpp  app.h  main.cpp  timing.cpp  timing.h
src/examples/fireworks/: CMakeLists.txt  fireworks.cpp
src/examples/flightsim/: flightsim.cpp
src/examples/platform/: platform.cpp
src/fem/: cloth.rs  deformable.rs  fem.wgsl  fem_deformable.rs  mod.rs
src/hybrid/: articulated.rs  builders.rs  cloth.rs  collision.rs  control.rs  deformable.rs  experimental.rs  mesh.rs  mod.rs  rigid.rs  static_body.rs  visual.rs
src/hybrid/articulated/: helper.rs  mod.rs
src/hybrid/builders/: mod.rs
src/hybrid/deformable/: constructor.rs  mod.rs
src/hybrid/rigid/: helper.rs  mod.rs
src/hybrid/visual/: mod.rs  rigid_mesh.rs
src/interface/: biped.rs  cart.rs  cart_pole.rs  controller.rs  cube.rs  double_pendulum.rs  fem_deformable.rs  fluid.rs  hopper.rs  kinematic_loop.rs  mass_spring_deformable.rs  mesh.rs  mod.rs  navbot.rs  pendulum.rs  pusher.rs  quadruped.rs  rimless_wheel.rs  robot_arm.rs  util.rs
src/interface/fem/: cloth.rs  fem_deformable.rs  mod.rs
src/interface/hybrid/: creator.rs  mod.rs
src/interface/mass_spring/: mod.rs
src/interface/mpm/: mod.rs
src/joint/: constraint_revolute.rs  cylindrical_constraint.rs  fixed.rs  floating.rs  mod.rs  prismatic.rs  revolute.rs
src/joint/constraint/: cylindrical_constraint.rs  mod.rs
src/mass_spring/: mod.rs
src/mpm/: mod.rs
src/spatial/: geometric_jacobian.rs  mod.rs  pose.rs  spatial_acceleration.rs  spatial_vector.rs  transform.rs  twist.rs  wrench.rs
www/: README.md  package-lock.json  package.json  rspack.config.js  tsconfig.json  webpack.config.js
www/src/: Graphics.ts  Simulator.ts  biped.ts  cloth.ts  cube.ts  demo.ts  gripper.ts  hybrid.ts  index.ts  lib.ts  mass_spring.ts  mpm.ts  type.ts
www/src/demo/: desktop.ts  gripper.ts  parallelBar.ts  table.ts
www/static/: index.html
www/static/soundbox/: soundbox.mtl
