[package]
name = "gorilla-physics"
version = "0.1.0"
edition = "2021"

[lib]
name = "gorilla_physics"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pendulum_energy"
path = "examples/pendulum_energy.rs"

[[bin]]
name = "cart"
path = "examples/cart.rs"

[[bin]]
name = "cart_pole"
path = "examples/cart_pole.rs"

[[bin]]
name = "double_pendulum"
path = "examples/double_pendulum.rs"

[[bin]]
name = "acrobot"
path = "examples/acrobot.rs"

[[bin]]
name = "ball"
path = "examples/ball.rs"

[[bin]]
name = "1D_hopper"
path = "examples/1D_hopper.rs"

[[bin]]
name = "cube"
path = "examples/cube.rs"

[[bin]]
name = "rimless_wheel"
path = "examples/rimless_wheel.rs"

[[bin]]
name = "SLIP"
path = "examples/SLIP.rs"


[[bin]]
name = "LSLIP"
path = "examples/LSLIP.rs"

[[bin]]
name = "ALSLIP"
path = "examples/ALSLIP.rs"

[[bin]]
name = "rod_by_spring"
path = "examples/rod_by_spring.rs"

[[bin]]
name = "spring_drop"
path = "examples/spring_drop.rs"

[[bin]]
name = "pusher"
path = "examples/pusher.rs"

[dependencies]
itertools = "0.13.0"
nalgebra = "0.33"
plotters = "0.3.5"
wasm-bindgen = "=0.2.89"
web-sys = { version = "0.3.65", features = ['console'] }
ordered-float = "5.0.0"

[dev-dependencies]
rand = "0.9.0"

[build]
# rustflags = ["-Awarnings"]
